# TimeBound

./: .gitignore  README.md  pyproject.toml  pytest.ini
data/: champion_svg_paths.json  champions.json
data/outputs/: hierarchical_clusters.json  similar_to_aatrox.json  similar_to_briar.json  similar_to_caitlyn.json  similar_to_kaisa.json  similar_to_nasus.json  similar_to_sejuani.json  similar_to_seraphine.json  similar_to_shen.json  similar_to_smolder.json  similar_to_zac.json  spectral_clusters.json  threshold_clusters.json
docs/: architecture.md  champion_clustering.md  sequence_diagram.md
src/: __init__.py  main.py
src/acquisition/: __init__.py  svg_extractor.py
src/analysis/: __init__.py  graph_correlation.py
src/analysis/champion_path_clustering/: __init__.py  clusterer.py  clustering_types.py  evaluate_clustering.py  factory.py
src/analysis/champion_path_clustering/strategies/: __init__.py  base.py  hierarchical.py  spectral.py  threshold.py
src/examples/: champion_path_clustering_example.py  check_correlation.py
src/processing/: __init__.py  svg_parser.py
src/utils/: logger.py  matrix_operations.py
src/visualization/: __init__.py  cluster_visualizer.py
tests/: __init__.py  conftest.py  test_clustering.py  test_graph_correlation.py  test_svg_parser.py
